--- a/free-nodes/page-8.htm
+++ b/free-nodes/page-8.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-08-26">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-8-26-free-v2ray.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/572cca27916877c289a949f8bee620b0.webp" alt="8月26日→22.9M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-8-26-free-v2ray.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">8月26日→22.9M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了美国、欧洲、新加坡、加拿大、韩国、日本、香港等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-08-25">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-8-25-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -219,20 +233,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-08-15">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-8-15-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/5faefa7f3266b2052cc429ac9dbbdaf6.webp" alt="8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-8-15-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、香港、韩国、加拿大等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-7.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-24.htm">24</a></li><li><a href="/free-nodes/page-25.htm">25</a></li> <li><a href="/free-nodes/page-9.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -243,16 +243,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-22-node-share-links.htm" title="4月22日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接">4月22日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-13-free-ssr-subscribe.htm" title="3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-21-free-node-subscribe-links.htm" title="10月21日→19.7M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐">10月21日→19.7M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-24-clash-node.htm" title="6月24日→22.3M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">6月24日→22.3M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-22-free-node-subscribe.htm" title="3月22日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接">3月22日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-11-clash-windows.htm" title="8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-25-free-high-speed-nodes.htm" title="6月25日→21.4M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">6月25日→21.4M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-15-clash-node.htm" title="10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-9-node-share-links.htm" title="6月9日→18.9M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">6月9日→18.9M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-14-free-clash.htm" title="6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-11-free-clash.htm" title="5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-5-free-node-subscribe-links.htm" title="4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接">4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-9-free-v2ray-subscribe.htm" title="4月9日→18.8M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月9日→18.8M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-29-free-subscribe-node.htm" title="4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-2-node-share.htm" title="3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接">3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-30-clash-node-daily-updates.htm" title="3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接">3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-10-clash-node-daily-updates.htm" title="8月10日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">8月10日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-25-free-node-subscribe.htm" title="4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-19-clash-node-daily-updates.htm" title="7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-20-free-v2ray.htm" title="6月20日→20.4M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">6月20日→20.4M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -264,7 +264,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">5</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
